// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deletes child element 1`] = `
"import * as React from 'react';

const Component = () => (
  <div>
    
  </div>
);

export default Component;
"
`;

exports[`deletes element with no parent 1`] = `
"import * as React from 'react';

const Component = () => null;

export default Component;
"
`;
